--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>src/examples</source>
+                                <source>examples</source>
                             </sources>
                         </configuration>
                     </execution>
@@ -79,6 +79,15 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
+                </configuration>
+            </plugin>
+            <!-- Exec Maven Plugin for running examples -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>${exec.mainClass}</mainClass>
                 </configuration>
             </plugin>
         </plugins>
