--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <repository>
             <id>github</id>
             <name>GitHub GFW Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/Nebalus/JLogger</url>
+            <url>https://maven.pkg.github.com/Nebalus/JavaDI</url>
         </repository>
     </distributionManagement>
 
